[package]
name = "cl"
version = "0.1.0"
authors = ["dat14mak <dat14mak@student.lu.se>"]

[dependencies]
deque = "0.3.2"
num_cpus = "0.2"
ignore = "0.4.2"
clap = "2.32.0"
memmap = "0.6.2"
fastchr = "0.3.0"


# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
